2006-02-05 Paul Jakma <paul.jakma@sun.com>

	* bgp_route.h: Add BGP_INFO_COUNTED to track whether
	  prefix has been counted or not.
	* bgp_route.c: (bgp_pcount_{inc,dec}rement) new helpers, to
	  centralise inc/dec of prefix-count, 
	  (bgp_rib_remove) Remove pcount decrement, use helper.
	  (bgp_rib_withdraw) ditto, additionally use previous function
	  too.
	  (bgp_update_main) Use pcount helpers.
	  (bgp_clear_route_node) ditto, aslo REMOVED routes don't need
	  clearing.
	* bgp_aspath.c: (aspath_gettoken) fix gcc warning about
	  possible uninitialised usage.
 
2006-02-02 Paul Jakma <paul.jakma@sun.com>

	* bgp_route.c: (bgp_{clear_node,process}_queue_init) delay
	  field is removed from workqueue spec.

2006-01-19 Paul Jakma <paul.jakma@sun.com>

	* (general) various miscellaneous compiler warning fixes.
	   Remove redundant break statements from switch clauses
	   which return.
	   return from main, not exit, cause it annoys SOS.
	   Remove stray semi-colons which cause empty-statement
	   warnings.

2006-01-17 Paul Jakma <paul.jakma@sun.com>

	* bgp_nexthop.c: (zlookup_read*) convert to new Zserv format.
	  (zlookup_query_ipv6) ditto.
	  (bgp_import_check) ditto.
	  
2006-01-16 Paul Jakma <paul.jakma@sun.com>

	* bgp_aspath.c: (assegment_append_asns) XREALLOC can return
	  NULL theoretically, take care not to lose the allocated data.
	  (aspath_hash_alloc) aspath_dup already set the aspath
	  string - fix leak.
	  (aspath_parse) aspath_hash_alloc dupes the entire aspath,
	  including segments, but we forgot to free the temporary
	  assegment.
	  (aspath_snmp_pathseg) move the static stream pointer out to
	  file scope, so it can be freed.
	  (aspath_finish) new function, free aspath resources.
	* bgp_aspath.h: (aspath_finish) export.

2006-01-10 Juris Kalnins <juris@mt.lv>

	* bgpd.h: (bgp_router_id_unset) ex-function, remove.
	
2005-11-23 Paul Jakma <paul.jakma@sun.com>

	* bgp_aspath.c: (assegments_parse) should be static
